# aws-deepracer-inference-pkg

./: README.md
inference_pkg/: CMakeLists.txt  package.xml
inference_pkg/include/inference_pkg/: image_process.hpp  inference_base.hpp  intel_inference_eng.hpp  tflite_inference_eng.hpp
inference_pkg/launch/: inference_pkg_launch.py
inference_pkg/src/: image_process.cpp  inference_node.cpp  intel_inference_eng.cpp  tflite_inference_eng.cpp
